<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="pref_use_time"
        android:title="@string/pref_time_title"
        android:summary="@string/pref_time_summary"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="pref_nightlines"
        android:title="@string/pref_nightlines_title"
        android:summary="@string/pref_nightlines_summary"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="pref_its2"
        android:title="@string/pref_its2_title"
        android:summary="@string/pref_its2_summary"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="pref_ada"
        android:title="@string/pref_ada_title"
        android:summary="@string/pref_ada_summary"
        android:defaultValue="false" />
    <ListPreference
        android:key="pref_switch_tendency"
        android:title="@string/pref_switch_tendency_title"
        android:summary="@string/pref_switch_tendency_summary"
        android:entries="@array/pref_switch_tendency_items"
        android:entryValues="@array/pref_switch_tendency_values"/>
</PreferenceScreen>